spaces/private/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-ingress
  namespace: private
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: private.devailab.work
      http:
        paths:
          - path: /adrien(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: adrien
                port:
                  number: 8000
